[metadata]
name = ai_ticket
version = 0.0.1
author = Mike dupont
author_email = mike
description = AI ticket interface
url = https://github.com/jmikedupont2/at-ticket

[options]
srpackage_dir =
    = src
    = src/ai_ticket/
    = src/ai_ticket/backends
    = src/ai_ticket/events
packages = find:
python_requires = >=3.8
install_requires =
   PyGithub
   python-dotenv

[options.extras_require]
dev =
    pytest==6.2.5
    pytest-forked
    pytest-asyncio==0.16.0
    black==22.3.0
    isort==5.10.1
    psutil

[options.packages.find]
where = src
